--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,10 @@ coverage/
 .env.development
 .env.production
 
+# MCP configuration (contains secrets)
+mcp.json
+.mcp.json
+
 # Editor
 .vscode/
 .idea/
