--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "build:ios:dev": "eas build --platform ios --profile development",
+    "build:ios:preview": "eas build --platform ios --profile preview",
+    "build:ios:prod": "eas build --platform ios --profile production"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.1.0",
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@supabase/supabase-js": "^2.38.0",
     "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
-    "@expo/vector-icons": "^14.0.0",
-    "@supabase/supabase-js": "^2.38.0",
-    "@react-native-async-storage/async-storage": "^1.19.0",
-    "@google/generative-ai": "^0.1.0"
+    "react-native": "0.74.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
