--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.1.0",
-    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@supabase/supabase-js": "^2.38.0",
     "expo": "~51.0.28",
-    "expo-image-picker": "~15.0.7",
+    "expo-camera": "~15.0.16",
+    "expo-image-picker": "~15.1.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
