--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase設定（必須）
 EXPO_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=eyJxxxxx
+SUPABASE_SERVICE_ROLE_KEY=eyJxxxxx # サーバーサイド専用（Edge Functions用）
 
 # Gemini API設定（必須）
 GEMINI_API_KEY=your_gemini_api_key
@@ -16,3 +17,10 @@ EXPO_PUBLIC_MIXPANEL_TOKEN=your_mixpanel_token
 
 # その他の設定
 NODE_ENV=development
+
+# Mock API設定（開発用）
+EXPO_PUBLIC_USE_MOCK=true
+EXPO_PUBLIC_API_URL=http://localhost:3000
+# EXPO_PUBLIC_DISABLE_ERROR_SIM=false
+# EXPO_PUBLIC_MOCK_DELAY=500
+# EXPO_PUBLIC_NETWORK_CONDITION=fast
