[BE-002] DB schema + Actions (workflow_dispatch, pgcrypto, docs)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
+    "gen:types": "npx supabase@latest gen types typescript --project-id $SUPABASE_PROJECT_REF --schema public > src/types/database.ts",
     "build:ios:dev": "eas build --platform ios --profile development",
     "build:ios:preview": "eas build --platform ios --profile preview",
     "build:ios:prod": "eas build --platform ios --profile production"
