--- a/.github/workflows/supabase-migrations.yml
+++ b/.github/workflows/supabase-migrations.yml
@@ -37,4 +37,4 @@ jobs:
 
       - name: Push migrations
         run: |
-          supabase db push --include-all --non-interactive
+          printf "y\n" | supabase db push --include-all
