--- a/.github/workflows/supabase-migrations.yml
+++ b/.github/workflows/supabase-migrations.yml
@@ -53,6 +53,19 @@ jobs:
             supabase migration repair --status applied "$base" || true
           done
 
+      - name: Temporarily ignore legacy initial migrations in CI
+        run: |
+          mkdir -p ../_ci_ignore
+          # Move legacy initial migrations out so db push only applies new ones
+          for f in \
+            migrations/20250128_000001_initial_setup.sql \
+            migrations/20250128_000002_storage_setup.sql; do
+            if [ -f "$f" ]; then
+              echo "Temporarily moving $f"
+              mv "$f" ../_ci_ignore/
+            fi
+          done
+
       - name: Push migrations
         run: |
           printf "y\n" | supabase db push --include-all
