--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@supabase/supabase-js": "^2.38.0",
-    "expo": "~51.0.28",
-    "expo-camera": "~15.0.16",
-    "expo-image-manipulator": "^13.1.7",
-    "expo-image-picker": "~15.1.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
+    "expo": "53.0.22",
+    "expo-camera": "~16.1.11",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "@types/react": "~18.2.79",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.32.2",
