[BE-003] upgrade Expo SDK from 51 to 53 for iOS compatibility

--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
         {
           "photosPermission": "お部屋の写真を選択して、最適な植物をご提案します"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "scheme": "nyoki",
     "updates": {
