--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-url-polyfill": "^2.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "expo-image-manipulator": "~13.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
