--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native": "0.79.5",
     "react-native-url-polyfill": "^2.0.0",
     "typescript": "~5.8.3",
-    "expo-image-manipulator": "~13.1.7"
+    "expo-image-manipulator": "~13.1.7",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
