--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "expo": "53.0.22",
     "expo-camera": "~16.1.11",
     "expo-font": "~13.3.2",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
+    "expo-media-library": "^17.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "typescript": "~5.8.3",
-    "expo-image-manipulator": "~13.1.7",
-    "react-native-safe-area-context": "5.4.0"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
