--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "typescript": "~5.8.3"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -44,7 +43,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.9.2"
   },
   "private": true
 }
