--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-url-polyfill": "^2.0.0"
   },
