--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
           "photosPermission": "お部屋の写真を選択して、最適な植物をご提案します"
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-web-browser"
     ],
     "scheme": "nyoki",
     "updates": {
