--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.38.0",
     "expo": "53.0.22",
     "expo-camera": "~16.1.11",
@@ -27,11 +29,13 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-media-library": "^17.1.7",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.16.0",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
